--- a/index.html
+++ b/index.html
@@ -4,31 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
     <!-- Contact -->
-    <header>
+    <header class="header">
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="Neme-logo" href="./index.html"
+          ><span class="Neme">Web</span>Studio</a
+        >
         <ul>
           <li>
-            <a href="Studio">Studio</a>
+            <a class="item" href="Studio">Studio</a>
           </li>
           <li>
-            <a href="Portfolio">Portfolio</a>
+            <a class="item" href="Portfolio">Portfolio</a>
           </li>
           <li>
-            <a href="Contacts">Contacts</a>
+            <a class="item" href="Contacts">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -36,94 +48,171 @@
 
     <!-- Content -->
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="Fon">
+        <h1 class="title">Effective Solutions for Your Business</h1>
+        <button class="Cnopca" type="button">
+          <samp class="Inscription">Order Service</samp>
+        </button>
       </section>
       <section>
-        <h2>description</h2>
+        <h2>Deskription</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="content">Strategy</h3>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="content">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="content">Diligence</h3>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="content">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="Fonfoto">
+        <h2 class="Team">Our Team</h2>
         <ul>
-          <li>
+          <li class="user">
             <img
+              class="user-img"
               src="./images/img-1.jpg"
               width="264"
               height="260"
               alt="Product Designer"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="User-name">Mark Guerrero</h3>
+            <p class="Profession">Product Designer</p>
           </li>
-          <li>
+          <li class="user">
             <img
+              class="user-img"
               src="./images/img-2.jpg"
               width="264"
               height="260"
               alt="Frontend Developer"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="User-name">Tom Ford</h3>
+            <p class="Profession">Frontend Developer</p>
           </li>
-          <li>
+          <li class="user">
             <img
+              class="user-img"
               src="./images/img-3.jpg"
               width="264"
               height="260"
               alt="Marketing"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="User-name">Camila Garcia</h3>
+            <p class="Profession">Marketing</p>
           </li>
-          <li>
+          <li class="user">
             <img
+              class="user-img"
               src="./images/img-4.jpg"
               width="264"
               height="260"
               alt="UI Designer"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="User-name">Daniel Wilson</h3>
+            <p class="Profession">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section class="Project-Card">
+        <h2>Our Portfolio</h2>
+        <ul class="Portfolio">
+          <li>
+            <img
+              class="Portfolio-img"
+              src="./images/ProjectCard-1.jpg"
+              width="360"
+              height="300"
+              alt="Banking App"
+            />
+            <h3 class="gallery-item">Banking App</h3>
+            <p class="epp">App</p>
+          </li>
+          <li>
+            <img
+              class="Portfolio-img"
+              src="./images/ProjectCard-2.jpg"
+              width="360"
+              height="300"
+              alt="Cashless Payment"
+            />
+            <h3 class="gallery-item">Cashless Payment</h3>
+            <p class="epp">Marketing</p>
+          </li>
+          <li>
+            <img
+              class="Portfolio-img"
+              src="./images/ProjectCard-3.jpg"
+              width="360"
+              height="300"
+              alt="Meditation App"
+            />
+            <h3 class="gallery-item">Meditation App</h3>
+            <p class="epp">App</p>
+          </li>
+          <li>
+            <img
+              class="Portfolio-img"
+              src="./images/ProjectCard-4.jpg"
+              width="360"
+              height="300"
+              alt="Taxi Service"
+            />
+            <h3 class="gallery-item">Taxi Service</h3>
+            <p class="epp">Marketing</p>
+          </li>
+          <li>
+            <img
+              class="Portfolio-img"
+              src="./images/ProjectCard-5.jpg"
+              width="360"
+              height="300"
+              alt="Screen Illustrations"
+            />
+            <h3 class="gallery-item">Screen Illustrations</h3>
+            <p class="epp">Design</p>
+          </li>
+          <li>
+            <img
+              class="Portfolio-img"
+              src="./images/ProjectCard-6.jpg"
+              width="360"
+              height="300"
+              alt="Online Courses"
+            />
+            <h3 class="gallery-item">Online Courses</h3>
+            <p class="epp">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!-- Footer section -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="lodg"><span class="lod">Web</span>Studio</a>
+      <p class="para">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
