--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!-- Contact -->
     <header class="header">
       <nav>
-        <a class="Neme-logo" href="./index.html"
-          ><span class="Neme">Web</span>Studio</a
+        <a href="./index.html" class="name"
+          ><span class="neme-logo">Web</span>Studio</a
         >
         <ul>
           <li>
@@ -32,7 +32,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="adres">
         <ul>
           <li>
             <a class="link" href="mailto:info@devstudio.com"
@@ -48,10 +48,10 @@
 
     <!-- Content -->
     <main>
-      <section class="Fon">
+      <section class="fon">
         <h1 class="title">Effective Solutions for Your Business</h1>
-        <button class="Cnopca" type="button">
-          <samp class="Inscription">Order Service</samp>
+        <button class="cnopca" type="button">
+          <samp class="inscription">Order Service</samp>
         </button>
       </section>
       <section>
@@ -87,8 +87,8 @@
           </li>
         </ul>
       </section>
-      <section class="Fonfoto">
-        <h2 class="Team">Our Team</h2>
+      <section class="fonfoto">
+        <h2 class="team">Our Team</h2>
         <ul>
           <li class="user">
             <img
@@ -98,8 +98,8 @@
               height="260"
               alt="Product Designer"
             />
-            <h3 class="User-name">Mark Guerrero</h3>
-            <p class="Profession">Product Designer</p>
+            <h3 class="user-name">Mark Guerrero</h3>
+            <p class="profession">Product Designer</p>
           </li>
           <li class="user">
             <img
@@ -109,8 +109,8 @@
               height="260"
               alt="Frontend Developer"
             />
-            <h3 class="User-name">Tom Ford</h3>
-            <p class="Profession">Frontend Developer</p>
+            <h3 class="user-name">Tom Ford</h3>
+            <p class="profession">Frontend Developer</p>
           </li>
           <li class="user">
             <img
@@ -120,8 +120,8 @@
               height="260"
               alt="Marketing"
             />
-            <h3 class="User-name">Camila Garcia</h3>
-            <p class="Profession">Marketing</p>
+            <h3 class="user-name">Camila Garcia</h3>
+            <p class="profession">Marketing</p>
           </li>
           <li class="user">
             <img
@@ -131,17 +131,17 @@
               height="260"
               alt="UI Designer"
             />
-            <h3 class="User-name">Daniel Wilson</h3>
-            <p class="Profession">UI Designer</p>
+            <h3 class="user-name">Daniel Wilson</h3>
+            <p class="profession">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section class="Project-Card">
-        <h2>Our Portfolio</h2>
-        <ul class="Portfolio">
+      <section class="project-card">
+        <h2 class="section-our">Our Portfolio</h2>
+        <ul class="portfolio">
           <li>
             <img
-              class="Portfolio-img"
+              class="portfolio-img"
               src="./images/ProjectCard-1.jpg"
               width="360"
               height="300"
@@ -152,7 +152,7 @@
           </li>
           <li>
             <img
-              class="Portfolio-img"
+              class="portfolio-img"
               src="./images/ProjectCard-2.jpg"
               width="360"
               height="300"
@@ -163,7 +163,7 @@
           </li>
           <li>
             <img
-              class="Portfolio-img"
+              class="portfolio-img"
               src="./images/ProjectCard-3.jpg"
               width="360"
               height="300"
@@ -174,7 +174,7 @@
           </li>
           <li>
             <img
-              class="Portfolio-img"
+              class="portfolio-img"
               src="./images/ProjectCard-4.jpg"
               width="360"
               height="300"
@@ -185,7 +185,7 @@
           </li>
           <li>
             <img
-              class="Portfolio-img"
+              class="portfolio-img"
               src="./images/ProjectCard-5.jpg"
               width="360"
               height="300"
@@ -196,7 +196,7 @@
           </li>
           <li>
             <img
-              class="Portfolio-img"
+              class="portfolio-img"
               src="./images/ProjectCard-6.jpg"
               width="360"
               height="300"
