--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         >
         <ul>
           <li>
-            <a class="item" href="Studio">Studio</a>
+            <a class="item" href="./index.html">Studio</a>
           </li>
           <li>
-            <a class="item" href="Portfolio">Portfolio</a>
+            <a class="item" href="">Portfolio</a>
           </li>
           <li>
-            <a class="item" href="Contacts">Contacts</a>
+            <a class="item" href="">Contacts</a>
           </li>
         </ul>
       </nav>
