--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
       <nav>
         <a href="./index.html" class="name"
-          >Web<samp class="name-logo">Studio</samp></a
+          >Web<span class="name-logo">Studio</span></a
         >
         <ul>
           <li>
@@ -211,7 +211,7 @@
 
     <!-- Footer section -->
     <footer class="footer">
-      <a href="./index.html" class="lodg">Web<samp class="lod">Studio</samp></a>
+      <a href="./index.html" class="lodg">Web<span class="lod">Studio</span></a>
       <p class="para">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
