--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!-- Contact -->
     <header class="header">
       <nav>
-        <a href="./index.html" class="name"
-          >Web<span class="name-logo">Studio</span></a
+        <a href="./index.html" class="header-item"
+          >Web<span class="item-logo">Studio</span></a
         >
         <ul>
           <li>
