--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </ul>
       </section>
       <section class="project-card">
-        <h2 class="section-our">Our Portfolio</h2>
+        <h2 class="section-logo">Our Portfolio</h2>
         <ul class="portfolio">
           <li>
             <img
