--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               height="300"
               alt="Meditation App"
             />
-            <h3 class="gallery-item">Meditation App</h3>
+            <h3 class="gallery-itemm">Meditation App</h3>
             <p class="epp">App</p>
           </li>
           <li>
